openshift/site_registry/test/frontend/site_frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-frontend
  namespace: c6a6e5-test
  labels:
    app.kubernetes.io/name: site-frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: site-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: site-frontend
    spec:
      containers:
        - name: site-frontend
          image: 'image-registry.openshift-image-registry.svc:5000/c6a6e5-tools/site-frontend:test'
          imagePullPolicy: Always
          env:
            - name: LOG_LEVEL
              value: 'info'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi

          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config/config.js
              subPath: config.js
      volumes:
        - name: config-volume
          configMap:
            name: site-frontend
            items:
              - key: config.js
                path: config.js
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - site-frontend
                  - key: app.kubernetes.io/instance
                    operator: In
                    values:
                      - site-frontend
              topologyKey: 'kubernetes.io/hostname'
