openshift/site_registry/test/frontend/site_frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-frontend
  namespace: c6a6e5-test
  labels:
    app.kubernetes.io/name: site-frontend
  annotations:
    route.openshift.io/termination: "edge"
spec:
  ingressClassName: openshift-default
  rules:
    - host: nr-site-registry-test-frontend.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: site-frontend
                port:
                  number: 80
