openshift/site_registry/test/frontend/site_frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-frontend
  namespace: c6a6e5-test
  labels:
    app.kubernetes.io/name: site-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: site-frontend
